@@ -1,3 +1,8 @@
+2014-10-27  Luke Kendall  <luke.kendall@cisra.canon.com.au>
+	    Corinna Vinschen  <corinna@vinschen.de>
+
+	* ntsec.xml: More language fixes.
+
 2014-10-27  Corinna Vinschen  <corinna@vinschen.de>
 
 	* new-features.xml (ov-new1.7.33): Document empty $PATH handling.
